# rust50

./: .gitignore  Cargo.toml  README.md  auto_reorganize.sh
c_to_rust/caesar/src/: main.rs
c_to_rust/cash/src/: main.rs
c_to_rust/credit/: Cargo.toml
c_to_rust/credit/src/: main.rs
c_to_rust/guessing_game/: Cargo.toml
c_to_rust/hello_me/: Cargo.toml
c_to_rust/hello_me/src/: main.rs
c_to_rust/mario_more/: Cargo.toml
c_to_rust/mario_more/src/: main.rs
c_to_rust/my_library/: README.md
c_to_rust/my_library/src/: lib.rs
c_to_rust/plurality/src/: main.rs
c_to_rust/pset1/cash/: Cargo.toml
c_to_rust/pset1/hello_me/: Cargo.toml
c_to_rust/pset1/hello_world/: Cargo.toml
c_to_rust/pset1/mario_more/: Cargo.toml
c_to_rust/pset2/caesar/: Cargo.toml
c_to_rust/pset2/substitution/: Cargo.toml
c_to_rust/pset3/plurality/: Cargo.toml
c_to_rust/pset3/runoff/: Cargo.toml
c_to_rust/pset4/recover/: Cargo.toml
c_to_rust/pset4/volume/: Cargo.toml
c_to_rust/pset5/inheritance/: Cargo.toml
c_to_rust/pset6/dna/: Cargo.toml  README.md
c_to_rust/pset6/dna/src/: main.rs
c_to_rust/readability/: Cargo.toml
c_to_rust/readability/src/: main.rs
c_to_rust/runoff/src/: main.rs
c_to_rust/scrabble/: Cargo.toml
c_to_rust/scrabble/src/: main.rs
c_to_rust/substitution/: Cargo.toml
c_to_rust/substitution/src/: main.rs
c_to_rust/tideman/: Cargo.toml
c_to_rust/tideman/src/: main.rs
cs50_to_rust/pset1/credit/: Cargo.toml
cs50_to_rust/pset1/hello_me/: Cargo.toml
hello_cargo/hello_cargo/: README.md
rust50/: Cargo.toml  README.md
src/: lib.rs  main.rs
(+33 files in other folders)
