[workspace]
resolver = "3"
members = [
    "rust50",
    "c_to_rust/pset1/hello_me",
    "c_to_rust/pset1/hello_world",
    "c_to_rust/pset1/mario_more",
    "c_to_rust/pset1/cash",
    "c_to_rust/pset1/credit",
    "c_to_rust/pset2/scrabble",
    "c_to_rust/pset2/readability",
    "c_to_rust/pset2/caesar",
    "c_to_rust/pset2/substitution",
    "c_to_rust/pset3/plurality",
    "c_to_rust/pset3/runoff",
    "c_to_rust/pset3/tideman",
    "c_to_rust/pset4/volume",
    "c_to_rust/pset4/filter",
    "c_to_rust/pset4/recover",
    "c_to_rust/pset5/inheritance", "c_to_rust/pset6/dna",
]
