[workspace]
resolver = "3"
members = [
    "rust50",
    "cs50_to_rust/pset1/hello_me",
    "cs50_to_rust/pset1/hello_world",
    "cs50_to_rust/pset1/mario_less",
    "cs50_to_rust/pset1/mario_more",
    "cs50_to_rust/pset1/cash",
    "cs50_to_rust/pset1/credit",
    "cs50_to_rust/pset2/scrabble",
    "cs50_to_rust/pset2/readability",
    "cs50_to_rust/pset2/caesar",
    "cs50_to_rust/pset2/substitution",
    "cs50_to_rust/pset3/plurality",
    "cs50_to_rust/pset3/runoff",
    "cs50_to_rust/pset3/tideman",
    "cs50_to_rust/pset4/volume",
    "cs50_to_rust/pset4/filter",
    "cs50_to_rust/pset4/recover",
    "cs50_to_rust/pset5/inheritance",
    "cs50_to_rust/pset5/speller",
    "cs50_to_rust/pset6/dna",
]
